# buildcheck

./: .env.example  .gitignore  README.md  arch-db-backup.sql  email.py  employee_submitter_validation.sql  main.py  pyproject.toml  rxconfig.py
.github/: pull_request_template.md
alembic/versions/: 0fd69c4376cb_.py  b96e81825d28_.py
assets/: export-lib.js  r2gvis.html
buildcheck/: __init__.py  buildcheck.py
buildcheck/backend/: blueprints.py  db_connection.py  email_utils.py  main.py  models.py  ocr_processor.py  r2g_client.py  rule_engine.py  supabase_client.py  validation.py  vectorization.py  visualizer.py  yolo_processor.py
buildcheck/components/: admin_status_tag.py  bclogo.py  complianceCard.py  employee_upload.py  footer.py  navbar.py  notification.py  progress_tracker.py  stat_card.py  state.py  status_tag.py
buildcheck/state/: user_state.py
buildcheck/views/: BlueprintAssignments.py  EmployeeView2.py  __init__.py  admin_assignments.py  admin_dashboard.py  admin_notifications.py  assign_page.py  employeeBlueprint1.py  employee_blueprint.py  employee_notfications.py  employee_notifications.py  employee_upload.py  employee_view.py  footer.py  navbar.py  notification_page.py  reviewer_assignment.py  reviewer_notifications.py  reviewer_validation.py  validationView_reviewer.py
db_backup/: cases_rows.sql  guidelines_rows.sql  notifications_rows.sql  submitter_trigger.sql  users_rows.sql  violations_rows.sql
